--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Plashr</string>
+    <string name="collections">Collections</string>
+    <string name="search">Search</string>
+    <string name="home">Home</string>
+    <string name="collections_content_description">Collections</string>
+    <string name="search_content_description">Search</string>
+    <string name="home_content_description">Home</string>
+    <string name="profile">Profile</string>
+    <string name="profile_content_description">Profile</string>
+    <string name="settings">Settings</string>
+    <string name="settings_content_description">Settings</string>
+    <string name="rick_instagram_handle">https://www.instagram.com/kimothorick</string>
 </resources>
